Added hibernate demo